--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Full Stack Web Developer"
     />
-    <meta name="keyword" content="portfolio, javascript, php, developer, web developer, full stack">
+    <meta name="keyword" content="portfolio, javascript, php, developer, web developer, full stack, limburg, the netherlands, nederland, full stack developer">
     <meta type="robots" content="index,follow">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
